syntax = "proto3";

package controlSystemPackage;

service ControlSystemService {
  rpc getApiPermission(ApiRequest) returns (ApiResponse);
  rpc createLogError(LogErroRequest) returns (LogErrorResponse);
}

message ApiRequest {
  string endpointPath = 1;
  string requestType = 2;
}

message ApiResponse {
  string _id = 1;
  string routeName = 2;
  string endpointPath = 3;
  bool dataReturnAllowed = 4;
}

message LogErrorRequest {
  string title = 1;
  string description = 2;
  string routeId = 3;
  string endpointPath = 4;
  string routeName = 5;
  repeated LeakData leakData = 6;
  string level = 7;
}

message LogErrorResponse {
  string message = 1;
}


message LeakData {
    string name = 1;
    string type = 2;
}